# elastic-looped-transformer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
_docs/: 2026-04-20-hf-export-rolling-ckpt-opus-4-7.md  2026-04-20-telemetry-dashboard-opus-4-7.md  2026-04-21-base-1b-paged-adamw-opus-4-7.md  2026-04-21-dense-first-milspec-posttrain-gpt-5.md  2026-04-21-disk-cleanup-opus-4-7.md  2026-04-21-disk-guard-readme-opus-4-7.md  2026-04-21-gguf-distill-cron-gpt-5.md  2026-04-21-hot-path-integration-opus-4-7.md  2026-04-21-inference-sweep-pareto-opus-4-7.md  2026-04-21-nvme-offload-opus-4-7.md  2026-04-21-positioning-analysis-opus-4-7.md  2026-04-22-corpus-weight-manifest-dedup-gpt-5.md  2026-04-22-gguf-distill-live-monitoring-gpt-5.md  2026-04-22-gguf-distill-resume-hardening-gpt-5.md  2026-04-22-gguf-distill-two-teacher-queue-gpt-5.md  2026-04-22-ilsd-entropy-curvature-gpt-5.md  2026-04-22-ilsd-sampled-logit-curvature-gpt-5.md  2026-04-22-ilsd-stability-and-benchmark-rerank-gpt-5.md  2026-04-22-prepare-gguf-detection-sft-gpt-5.md  2026-04-22-qwen35-gguf-distill-wiring-gpt-5.md  2026-04-22-webdataset-ingest-clean-inventory-gpt-5.md  2026-04-22-zstandard-webdataset-ingest-gpt-5.md  2026-04-23-multilane-distill-stack-gpt-5.md  2026-04-23-qwen35-4b-hf-looped-elt-gpt-5.md  2026-04-24-base-1b-clean-continue-smoke-gpt-5.md  2026-04-24-clean-corpus-audit-gpt-5.md  2026-04-24-cron-resumable-training-pipeline-gpt-5.md  2026-04-27-gguf-distill-reset-guard-gpt-5.md  2026-04-28-qwen35-side-sft-smoke-gpt-5.md  2026-04-29-posttrain-grpo-pipeline-gpt-5.md  2026-05-01-cron-heartbeat-eta-progress-gpt-5.md  2026-05-01-h-drive-runtime-cache-pipeline-gpt-5.md  2026-05-01-hauhaucs-distill-v1-quality-gates-gpt-5.md  2026-05-01-loop-refinement-eval-readme-gpt-5.md  2026-05-01-ltf-replay-refresh-gpt-5.md  2026-05-01-math-sft-lowmem-recovery-gpt-5.md  2026-05-01-posttrain-grpo-recovery-prune-gpt-5.md  2026-05-01-progress-report-cron-heartbeat-gpt-5.md  2026-05-01-stem-sft-val-format-verifier-eval-gpt-5.md  2026-05-02-gb-synthetic-v1-corpus-gpt-5.md  (+19 more)
configs/: aha_loop_self_distill_protocol.yaml  base_100M.yaml  base_100M_test.yaml  base_1B.yaml  base_1B_clean_replay_phase2.yaml  base_1B_continue_clean.yaml  base_1B_continue_clean_smoke.yaml  (+93 more)
(+231 files in other folders)
