[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elt-lm"
version = "0.1.0"
description = "Elastic Looped Transformer (arXiv:2604.09168) + Intra-Loop Self-Distillation, causal-LM port in PyTorch"
requires-python = "==3.12.9"
readme = { text = "See plan file in ~/.claude/plans/", content-type = "text/plain" }
license = { text = "Apache-2.0" }
authors = [{ name = "local" }]

dependencies = [
    "torch>=2.7.0",
    "einops>=0.8.0",
    "transformers>=4.45.0",
    "safetensors>=0.4.3",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.2",
    "numpy>=1.26.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.0",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
]
eval = [
    "datasets>=2.20.0",
    "jinja2>=3.1.0",
]
logging = [
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
]
dashboard = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "nvidia-ml-py>=12.535.0",
    "psutil>=5.9.0",
]
offload_8bit = [
    "bitsandbytes>=0.43.0",
]
posttrain = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "bandit>=1.7.9",
]

[project.scripts]
elt-train = "elt_lm.train:cli"
elt-train-grpo = "elt_lm.train_grpo:cli"
elt-train-reward = "elt_lm.train_reward_model:cli"
elt-gguf-distill = "elt_lm.gguf_distill:cli"
elt-gguf-distill-queue = "elt_lm.gguf_distill_queue:cli"
elt-prepare-gguf-lane-sft = "elt_lm.prepare_gguf_lane_sft:cli"
elt-prepare-gguf-detection-sft = "elt_lm.prepare_gguf_detection_sft:cli"
elt-bootstrap-qwen35-elt = "elt_lm.bootstrap_qwen35_elt:cli"
elt-infer = "elt_lm.infer:cli"
elt-tokenize = "elt_lm.tokenize_data:cli"
elt-anytime = "elt_lm.eval.anytime_sweep:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/elt_lm"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
